# tsim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  justfile.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  devdoc.yml  doc.yml  lint.yml  pub_doc.yml  release.yml
docs/: contrib.md  index.md  install.md
docs/demos/: aist_demo.ipynb  decoding_demo.ipynb  encoding_demo.ipynb  from_stim_to_tsim.ipynb  magic_state_distillation.ipynb  overview.ipynb  tutorial.ipynb  u3_demo.ipynb
docs/demos/draft/: aist_demo.ipynb  demo.ipynb
docs/demos/msd_circuits/: d=3_X.stim  d=5_X.stim
docs/demos/utils/: encoder.py
docs/scripts/: katex.js
docs/stylesheets/: extra.css
src/tsim/: __init__.py  _instructions.py  channels.py  circuit.py  compile.py  decomposer.py  dem.py  dyadic.py  evaluate.py  exact_scalar.py  graph_util.py  parse.py  program.py  sampler.py  simplify.py  stabrank.py  types.py
src/tsim/compile/: __init__.py  compile.py  evaluate.py  pipeline.py  stabrank.py
src/tsim/core/: __init__.py  exact_scalar.py  graph.py  instructions.py  parse.py  types.py
src/tsim/noise/: __init__.py  channels.py  dem.py
src/tsim/util/: linalg.py
src/tsim/utils/: __init__.py  diagram.py  encoder.py  linalg.py  program_text.py
test/: test_channels.py  test_circuit.py  test_correctness.py  test_dem.py  test_dyadic.py  test_exact_scalar.py  test_integration.py  test_linalg.py  test_placeholder.py  test_sampler.py
test/helpers/: gen.py  util.py
test/integration/: test_sampler.py  test_sampler_circuits.py
test/unit/: test_circuit.py
test/unit/core/: test_exact_scalar.py  test_instructions.py  test_parse.py
test/unit/noise/: test_channels.py  test_dem.py
test/unit/utils/: test_diagram.py  test_linalg.py  test_program_text.py
