[project]
name = "tsim"
version = "0.1.0"
description = "A non-Clifford circuit sampler based on ZX stabilizer rank decomposition"
authors = [
    { name = "Rafael Haenel", email = "rhaenel@quera.com" },
    { name = "Chen Zhao", email = "czhao@quera.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.8",
    "jax>=0.8.0",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "pyperclip>=1.11.0",
    "pyzx",
    "stim>=1.15.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.8.0"]
cuda13 = ["jax[cuda13]>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "coverage>=7.6.4",
    "galois>=0.4.7",
    "ipykernel>=6.1.0",
    "ipython>=8.29.0",
    "isort>=5.13.2",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.7",
    "mkdocs-jupyter>=0.25.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "py-spy>=0.4.1",
    "pymatching>=2.3.1",
    "pyright[nodejs]>=1.1.388",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "rust-just>=1.36.0",
    "sinter>=1.15.0",
    "tesseract-decoder>=0.1.1.dev20251113222502",
    "tqdm>=4.67.1",
]
doc = [
    "griffe-kirin>=0.1.0",
    "griffe-inherited-docstrings>=1.1.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.27.0",
    "jupytext>=1.17.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tsim"]

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3
src_paths = ["src/tsim"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/tsim/external",
]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.coverage.run]
include = ["src/tsim/*"]
omit = ["src/tsim/external/*"]

[tool.pytest.ini_options]
testpaths = "test/"
norecursedirs = ["pyzx"]

[tool.pyright]
include = ["src", "test"]
exclude = ["src/tsim/external"]

[tool.uv.sources]
pyzx = { git = "https://github.com/rafaelha/pyzx.git", rev = "paramzx" }
